# embed_doc

./: .gitignore  Cargo.toml  README.md
src/: document_intelligence.rs  error.rs  main.rs
