[package]
name = "embed_doc"
version = "0.1.0"
edition = "2024"
description = "A small utility to extract rich embeddings from pdf files"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.6.1", features = ["derive"] }
markdown = "1.0.0"
reqwest = { version = "0.13.4", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
